--- a/static/styles.css
+++ b/static/styles.css
@@ -14,25 +14,22 @@ form {
   background-color: rgb(219, 219, 219);
 }
 
-th {
-  color: rgb(225, 0, 0);
-}
-
 tr {
-  height: 50px;
+  height: 70px;
+  border-color: black;
 }
 
 li {
   width: 400px;
 }
 
-body {
-  background-color: rgb(7, 0, 48);
-}
+/* body {
+  background-color: rgb(220, 0, 0);
+} */
 
 button {
   width: 400px;
-  height: 40px;
+  
   text-align: left;
   border-top-style: solid;
   border-bottom-style: none;
@@ -43,7 +40,7 @@ button {
 
 .weight {
   width: 160px;
-  height: 40px;
+  
 }
 
 .name {
@@ -67,6 +64,7 @@ button {
   width: 400px;
   margin-left: 20px;
   background-color: rgb(219, 219, 219);
+  justify-content: center;
 }
 
 .hide {
@@ -74,7 +72,7 @@ button {
 }
 
 .box {
-  height: 400px;
+  
   padding-top: 20px;
   display: grid;
   justify-content: center;
@@ -85,17 +83,16 @@ button {
   border: none;
   display: grid;
   justify-content: center;
-  margin-top: 10%;
+  padding-top: 60px;
   width: 100%;
   background-color: rgb(219, 219, 219);
-  border-radius: 0%;
 }
 
 .mydiv {
   text-align: center;
-  margin-top: 200px;
   padding-bottom: 20px;
+  margin-top: 50px;
   width: 100%;
-  background-color: rgb(7, 0, 48);
+  background-color: rgb(219, 219, 219);
 }
 
