--- a/static/styles.css
+++ b/static/styles.css
@@ -3,33 +3,60 @@
   font-size: 5mm;
 }
 
-ul {
-  list-style: none;
-  width: 425px;    
-  margin-left: 724px;
-  margin-bottom: 0%;
-}
-
 form {
   background-color: rgb(219, 219, 219);
 }
 
-tr {
+tr:not(:last-child) {
+  border-bottom: 1px solid rgb(0, 0, 0);
+}
+
+th:not(:last-child), td:not(:last-child) {
+  border-right: 1px solid black;
+}
+
+thead {
+  border-bottom: black;
+}
+
+td {
   height: 70px;
-  border-color: black;
 }
 
-li {
-  width: 400px;
+header {
+  display: flex;
+  width: 100%;
+  height: 50px;
 }
 
-/* body {
-  background-color: rgb(220, 0, 0);
-} */
+.yellow {
+  display: inline;
+  background-color: yellow;
+  font-size: inherit;
+}
 
-button {
+.green {
+  display: inline;
+  background-color: rgb(0, 255, 0);
+  font-size: inherit;
+}
+
+.text {
+  display: inline;
+}
+
+.twin {
+  margin: 8px;
+  height: inherit;
+  width: 100%;
+  text-align: center;
+  color: rgb(255, 0, 0);
+  font-size: xx-large;
+  font-weight: 700;
+}
+
+.auto-comp-list {
   width: 400px;
-  
   text-align: left;
   border-top-style: solid;
   border-bottom-style: none;
@@ -38,30 +65,43 @@ button {
   border-top-color: grey;
 }
 
-.weight {
-  width: 160px;
+.head {
+  display: inline;
+  width: 50%;
+  text-align: right;
+}
+
+.test {
+  justify-content: center;
 }
 
 .name {
   width: 225px;
+  /* width: 30%; */
+}
+
+.hometown {
+  width: 125px;
+  /* width: 20%; */
+}
+
+.debut {
+  width: 130px;
+  /* width: 19%; */
+}
+
+.weight {
+  width: 160px;
+  /* width: 20%; */
 }
 
 .hight {
   width: 70px;
 }
 
-.debut {
-  width: 130px;
-}
-
-.hometown {
-  width: 125px;
-}
-
 .input-control {
   height: 50px;
   width: 400px;
-  margin-left: 20px;
   background-color: rgb(219, 219, 219);
 }
 
@@ -70,27 +110,128 @@ button {
 }
 
 .box {
-  padding-top: 20px;
+  padding-top: 1%;
   display: grid;
   justify-content: center;
   background-color: rgb(219, 219, 219);
 }
 
 .form-control {
-  border: none;
   display: grid;
   justify-content: center;
-  padding-top: 60px;
-  padding-bottom: 0px;
+  padding-top: 2%;
   width: 100%;
   background-color: rgb(219, 219, 219);
 }
 
 .mydiv {
   text-align: center;
-  padding-bottom: 20px;
-  margin-top: 50px;
+  padding-bottom: 2%;
+  margin-top: 2%;
   width: 100%;
   background-color: rgb(219, 219, 219);
 }
 
+/* The Modal (background) */
+.modal {
+  display: none; /* Hidden by default */
+  position: fixed; /* Stay in place */
+  z-index: 1; /* Sit on top */
+  left: 0;
+  top: 0;
+  width: 100%; /* Full width */
+  height: 100%; /* Full height */
+  overflow: auto; /* Enable scroll if needed */
+  background-color: rgb(0,0,0); /* Fallback color */
+  background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
+}
+
+/* Modal Content/Box */
+.modal-content {
+  background-color: #fefefe;
+  margin: 15% auto; /* 15% from the top and centered */
+  padding: 20px;
+  border: 1px solid #888;
+  width: 80%; /* Could be more or less, depending on screen size */
+}
+
+/* The Close Button */
+.close {
+  color: #aaa;
+  float: right;
+  font-size: 28px;
+  font-weight: bold;
+  position: absolute;
+  right: 0;
+  transform: translate(0, -50%);
+  top: 5%;
+}
+
+.close:hover,
+.close:focus {
+  color: black;
+  text-decoration: none;
+  cursor: pointer;
+}
+
+/* Modal Header */
+.modal-header {
+  padding: 2px 16px;
+  justify-content: center;
+  background-color: rgb(255, 0, 0);
+  color: white;
+}
+
+/* Modal Body */
+.modal-body {
+  text-align: center;
+}
+
+/* Modal Footer */
+.modal-footer {
+  padding: 2px 16px;
+  background-color: rgb(255, 0, 0);
+  color: rgb(255, 0, 0);
+}
+
+/* Modal Content */
+.modal-content {
+  position: relative;
+  font-size: small;
+  background-color: #fefefe;
+  margin: auto;
+  padding: 0;
+  border: 1px solid #888;
+  width: 44%;
+  margin-top: 6%;
+  box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2),0 6px 20px 0 rgba(0,0,0,0.19);
+  animation-name: animatetop;
+  animation-duration: 0.4s;
+}
+
+/* Add Animation */
+@keyframes animatetop {
+  from {top: -300px; opacity: 0}
+  to {top: 0; opacity: 1}
+}
+
+#myBtn {
+  position: absolute;
+  right: .1%;
+  transform: translate(0, -50%);
+  top: 2%;
+  font-size: 5mm;
+  border: none;
+  background-color: white;
+}
+
+.how-to-ul {
+  display: inline-block;
+  text-align: left;
+  color: black;
+}
+
+.how-to-li {
+  font-size: 4.5mm;
+  font-weight: 100;
+}
