--- a/templates/index.html
+++ b/templates/index.html
@@ -7,6 +7,7 @@
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
         <link href="static/styles.css" rel="stylesheet">
         <script src="static/scripts.js" defer></script>
+        <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
         <title>Ufc figher guessing game</title>
     </head>
     <header>
@@ -43,12 +44,19 @@
     </header>
     <body>
         <div class="mydiv">
-            <form action="/" id="form" method="post" autocomplete="off">
+            {% with messages = get_flashed_messages() %}
+                {% if messages %}
+                    {% for msg in messages %}
+                        <p>{{msg}}</p>
+                    {% endfor %}
+                {% endif %}
+            {% endwith %}
+            <form action="/" id="form" method="post" autocomplete="off" name="form">
                 <div class="form-control">
-                    <input class="input-control" id="answer" name="answer" type="text" autocomplete="off" placeholder="name" required></input>
-                    
+                    <input autofocus class="input-control" id="answer" name="answer" type="text" autocomplete="off" placeholder="Enter a name" required></input>
+                
+                    <ul id="auto-comp"></ul>
                 </div>
-                <ul id="auto-comp"></ul>
             </form>
             <div class="box">
                 <table class="table table-sm align-middle">
@@ -81,6 +89,7 @@
             </div>
         </div>
     </body>
-    <div id="div1" data-fighters='{{ FIGHTERS | tojson }}'></div>
+    <div id="div1" data-fighternames='{{ fighter_names | tojson }}'></div>
     <div id="div2" data-random='{{ answer | tojson }}'></div>
+    <div id="div3" data-numguesses='{{ num_guesses }}'></div>
 </html> 
