--- a/templates/index.html
+++ b/templates/index.html
@@ -59,7 +59,7 @@
                 </div>
             </form>
             <div class="box">
-                <table class="table table-sm align-middle">
+                <table class="tbl table table-sm align-middle">
                     <thead>
                         <tr>
                             <th>Name</th>
